# bib2yaml

./: pyproject.toml
bib2yaml/: bib2yaml.py  misc.py  titlecase.py
